--- a/nginx/conf.d/obsidian-ui.conf
+++ b/nginx/conf.d/obsidian-ui.conf
@@ -4,5 +4,6 @@ server {
   server_name_in_redirect off;
   root  /www;
   index /html/index.html;
-  rewrite ^/obsidian/ui$ /html/app.html last;
+  rewrite ^/obsidian/ui$ /html/obsidian-ui.html last;
+  rewrite ^/obsidian/ui/js/([^/]+\.js)$ /js/ui/src/$1 last;
 }
