--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,6 +18,7 @@ http {
     ' "$http_x_forwarded_for"';
 
   access_log /var/log/nginx/access.log main;
+  rewrite_log on;
 
   sendfile        on;
   # tcp_nopush     on;
